<?xml version="1.0"?>
<package>
  <name>voice_change_filter</name>
  <version>0.0.0</version>
  <description>The voice_change_filter package</description>
  <maintainer email="s-noda@jsk.imi.i.u-tokyo.ac.jp">s-noda</maintainer>
  <license>NYSL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
